<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/card_item"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginStart="8dp"
    android:layout_marginTop="4dp"
    android:layout_marginEnd="8dp"
    android:layout_marginBottom="4dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:orientation="vertical"
        android:paddingBottom="4dp">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/city_title"
                style="?attr/textAppearanceHeadline6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/city_type"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp" />

        </LinearLayout>


        <TextView
            android:id="@+id/more_info"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/label_button_more_info"
            android:textColor="@color/more_info"
            app:layout_constraintTop_toTopOf="parent" />


        <ProgressBar
            android:id="@+id/progressBar"
            style="?android:attr/progressBarStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone" />

        <HorizontalScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            android:id="@+id/times_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fillViewport="true"
            android:visibility="gone">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:visibility="visible">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:weightSum="10">

                    <ImageView
                        android:id="@+id/weather_img_day_1"
                        android:layout_width="100dp"
                        android:layout_height="100dp"
                        android:layout_gravity="center"
                        android:layout_margin="10dp" />


                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="10dp"
                        android:orientation="vertical">


                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/label_date"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/weather_date_1"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content" />


                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/label_state"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/weather_state_1"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/label_temp"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/weather_temp_1"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content" />


                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/label_temp_max"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/weather_temp_max_1"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content" />


                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/label_wint"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/weather_wint_1"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content" />

                    </LinearLayout>


                </LinearLayout>


                <FrameLayout
                    android:layout_width="1dp"
                    android:layout_height="match_parent"
                    android:background="@color/more_info">

                </FrameLayout>

                <LinearLayout

                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:weightSum="10">

                    <ImageView
                        android:id="@+id/weather_img_day_2"
                        android:layout_width="100dp"
                        android:layout_height="100dp"
                        android:layout_gravity="center"
                        android:layout_margin="10dp" />


                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="10dp"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/label_date"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/weather_date_2"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/label_state"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/weather_state_2"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/label_temp"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/weather_temp_2"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/label_temp_max"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/weather_temp_max_2"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content" />


                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/label_wint"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/weather_wint_2"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content" />

                    </LinearLayout>


                </LinearLayout>


                <FrameLayout
                    android:layout_width="1dp"
                    android:layout_height="match_parent"
                    android:background="@color/more_info"></FrameLayout>


                <LinearLayout

                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:weightSum="10">

                    <ImageView
                        android:id="@+id/weather_img_day_3"
                        android:layout_width="100dp"
                        android:layout_height="100dp"
                        android:layout_gravity="center"
                        android:layout_margin="10dp" />


                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="10dp"
                        android:orientation="vertical">


                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/label_date"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/weather_date_3"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/label_state"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/weather_state_3"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content" />


                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/label_temp"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/weather_temp_3"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content" />


                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/label_temp_max"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/weather_temp_max_3"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content" />


                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/label_wint"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/weather_wint_3"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content" />


                    </LinearLayout>


                </LinearLayout>

                <FrameLayout
                    android:layout_width="1dp"
                    android:layout_height="match_parent"
                    android:background="@color/more_info"></FrameLayout>

                <LinearLayout

                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:weightSum="10">

                    <ImageView
                        android:id="@+id/weather_img_day_4"
                        android:layout_width="100dp"
                        android:layout_height="100dp"
                        android:layout_gravity="center"
                        android:layout_margin="10dp" />


                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="10dp"
                        android:orientation="vertical">


                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/label_date"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/weather_date_4"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/label_state"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/weather_state_4"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content" />


                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/label_temp"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/weather_temp_4"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content" />


                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/label_temp_max"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/weather_temp_max_4"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content" />


                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/label_wint"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/weather_wint_4"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content" />


                    </LinearLayout>


                </LinearLayout>


            </LinearLayout>

        </HorizontalScrollView>


    </LinearLayout>

</androidx.cardview.widget.CardView>